# enterprise-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
demo/: README.md
docs/: architecture.md
src/app/: config.py  logging.py  main.py  redis_client.py  worker.py
src/app/api/: routes_health.py
src/app/persistence/: db.py
