[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Production-minded RAG knowledge assistant over internal documents (reference implementation)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Declared as the technology contract for this project. Implementation lands
# milestone by milestone; no application logic is wired yet (Milestone 1).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.13",
    "arq>=0.26",
    "redis>=5.1",
    "structlog>=24.4",
    "pypdf>=5.1",
    "tiktoken>=0.8",
    "fastembed>=0.4",          # default local embeddings (ONNX, no torch)
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = ["openai>=1.54"]      # opt-in cloud embeddings + generation
anthropic = ["anthropic>=0.39"]  # opt-in cloud generation
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
