[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Production-minded RAG knowledge assistant over internal documents (reference implementation)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Dependencies are added in the milestone that introduces the code using them.
# Current scope: application bootstrap (FastAPI, DB + Redis connectivity, health).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "redis>=5.1",
    "arq>=0.26",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
